force-app/main/default/objects/Affiliation__c/Affiliation__c.object-meta.xml
<CustomObject>
    <description>Defines the relationship between two accounts, person accounts or business accounts either one, or between accounts and contacts.</description>
    <label>Affiliation</label>
    <nameField>
        <label>Affiliation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>