force-app/main/default/objects/Affiliation__c/fields/Affiliated_Account__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that is chosen to be related to an account when creating an affiliation.</description>
    <label>Affiliated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations (Affiliated Business/Person)</relationshipLabel>
    <relationshipName>Additional_Affiliations2</relationshipName>
    <type>Lookup</type>
</CustomField>