force-app/main/default/objects/Affiliation__c/fields/Affiliated_Contact__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact selected when creating an affiliation from an account</description>
    <label>Affiliated Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>