force-app/main/default/objects/Affiliation__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <description>The affiliation pairing that was selected when creating the affilitation</description>
    <inlineHelpText>The &quot;Affiliated Account&quot; or &quot;Affiliated Contact&quot; has this type of relationship to the &quot;Main Account&quot; or &quot;Main Contact&quot;</inlineHelpText>
    <label>Affiliation Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>