force-app/main/default/objects/Affiliation__c/fields/Main_Account__c.field-meta.xml
<CustomField>
    <fullName>Main_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;source&quot; account that an affiliation is created FROM</description>
    <inlineHelpText>The &quot;source&quot; account that an affiliation is created FROM. When reading the affiliation, the relationship should read:
[Affiliated Account/contact] is a [Affiliation Type] of [Main Account/contact].</inlineHelpText>
    <label>Main Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations (Main Account)</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>